Add Vercel Analytics

--- a/index.html
+++ b/index.html
@@ -332,5 +332,9 @@
             loader.innerHTML = "Error loading data. Check console.";
         });
     </script>
+    <script type="module">
+      import { inject } from '@vercel/analytics';
+      inject();
+    </script>
 </body>
 </html>
