--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Live AV Map - Multi-Provider</title>
     <meta property="og:title" content="Live AV Map - Multi-Provider">
     <meta property="og:description" content="A visualization of self-driving vehicle zones for U.S. companies.">
-    <meta property="og:image" content="/open-graph.png">
+    <meta property="og:image" content="https://self-driving-map.vercel.app/open-graph.png">
     <meta property="og:type" content="website">
 
     <!-- Standard SEO -->
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Live AV Map - Multi-Provider">
     <meta name="twitter:description" content="Interactive map showing current and future operating zones for self-driving car companies like Waymo and Zoox.">
-    <meta name="twitter:image" content="/open-graph.png">
+    <meta name="twitter:image" content="https://self-driving-map.vercel.app/open-graph.png">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.2.0/ol.css">
     
